# Meshes2Labels

./: CMakeLists.txt  README.md  building.md  examples.md  io.cxx  io.h  m2l.cxx  vtkOBJWriter.cxx  vtkOBJWriter.h
cmake/: heds_apps_macros.cmake
data/: m2l_config.txt  m2l_test.bat  m2l_test.sh  phantom_right_pelvis.ply
examples/: m2l_test.bat  m2l_test.sh
